# world-cup-rosters-charts

./: .gitignore  ARCHITECTURE.md  CURRENT_STATE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  METHODOLOGY.md  PROJECT_PLAN.md  README.md  VISUALIZATIONS.md  WORKFLOW.md  cleanup_project.sh  pyproject.toml  test_api.py
dashboard/: dashboard.js  download_logos.py  download_logos_fixed.py  download_with_playwright.py  index.html  serve.py
dashboard/data/processed/: rosters_with_market_values.csv  tournament_results.csv
data/raw/: full_page_debug.html  page_debug.html  transfermarkt_page.html
github/workflows/: deploy.yml
notebooks/: 01_exploratory_analysis.ipynb
src/processing/: data_cleaner.py  extract_player_ids.py
src/scrapers/: check_search_progress.py  fix_korean_ids.py  identify_wrong_ids.py  transfermarkt_api_scraper.py  transfermarkt_debug.py  transfermarkt_extract.py  transfermarkt_extract_from_html.py  transfermarkt_extract_v2.py  transfermarkt_extract_v3.py  transfermarkt_network_intercept.py  transfermarkt_player_search.py  transfermarkt_scraper.py  utils.py  wikipedia_scraper.py
src/world_cup_rosters/: __init__.py
